# CFOPMEs

./: .gitignore  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  pytest.ini  requirements-vercel.txt  requirements.txt  tsconfig.json  vercel.json
ai_engine/: anomaly_trigger.py  financial_alert.py  fraud_realtime.py  inference.py
api/: api.py  main.py
api/auth/: dependencies.py  jwt.py  service.py
api/core/: auth.py  dependencies.py  security.py
api/middleware/: tenant.py
api/routes/: __init__.py  analytics.py  anomaly.py  auth.py  cashflow.py  documents.py  finance.py  fraud.py  health.py  nlp.py  payroll.py  reports.py  revenue.py  ueba.py
api/schemas/: __init__.py  requests.py
api/services/: supabase_client.py
app/: __init__.py
app/schemas/: _init__.py  serializers.py
core/: config.py
core/config/: logging.py  settings.py
core/db/: queries.py  supabase_client.py
core/security/: auth.py  rls_context.py
data/: .gitignore  __init__.py  pre-commit-config.yaml  pyproject.toml  ruff.toml  setup.py  sonar-project.properties
data/ai/: __init__.py  ai_audit.py  ai_governance.py  ai_metrics.py  embeddings_engine.py  hallucination_detector.py  inference_pipeline.py  llm_connector.py  model_router.py  prompt_enrichment.py  rag_pipeline.py  semantic_search.py  vectorization_engine.py
data/analytics/: __init__.py  analytics_audit.py  analytics_dashboard.py  analytics_metrics.py  anomaly_analytics.py  behavioral_analytics.py  business_analytics.py  forecasting_engine.py  predictive_analytics.py  realtime_analytics.py  statistical_engine.py  trend_analysis.py
data/governance/: __init__.py  access_governance.py  audit_trail.py  classification_engine.py  compliance_engine.py  data_masking.py  encryption_manager.py  governance_audit.py  governance_metrics.py  lineage_tracker.py  metadata_catalog.py  policy_engine.py  retention_policy.py  tokenization.py
data/ingestion/: __init__.py  api_ingestion.py  batch_ingestion.py  csv_loader.py  file_ingestion.py  ingestion_audit.py  ingestion_metrics.py  ingestion_pipeline.py  ingestion_scheduler.py  ingestion_validator.py  json_loader.py  kafka_consumer.py  kafka_producer.py  parquet_loader.py  rabbitmq_consumer.py  rabbitmq_producer.py  stream_ingestion.py  websocket_ingestion.py  xml_loader.py
data/integrations/: __init__.py  postgres_connector.py  supabase_connector.py
data/orchestration/: __init__.py  dag_manager.py  dependency_manager.py  distributed_executor.py  orchestration_audit.py  orchestration_metrics.py  retry_manager.py  rollback_manager.py  scheduler.py  task_dispatcher.py  workflow_engine.py
data/processing/: __init__.py  aggregation_engine.py  anomaly_detection.py  batch_processor.py  data_cleaner.py  deduplication_engine.py  distributed_processor.py  enrichment_engine.py  feature_engineering.py  feature_selection.py  graph_processor.py  normalization.py  outlier_detection.py  processing_audit.py  processing_metrics.py  schema_mapper.py  stream_processor.py  time_series_processor.py  transformation_pipeline.py  vector_processor.py
data/quality/: __init__.py  accuracy_checker.py  completeness_checker.py  consistency_checker.py  freshness_checker.py  null_analysis.py  profiling_engine.py  quality_audit.py  quality_dashboard.py  quality_metrics.py  quality_rules.py  quality_scoring.py  schema_drift_checker.py  uniqueness_checker.py
data/security/: __init__.py  abac_engine.py  authentication.py  authorization.py  decryption.py  encryption.py  intrusion_detection.py  key_management.py  rbac_engine.py  secret_manager.py  security_audit.py  security_metrics.py  security_scanner.py  tenant_isolation.py  threat_detection.py  vulnerability_scanner.py  zero_trust_engine.py
data/utils/: __init__.py  compression.py  concurrency.py  constants.py  decorators.py  dependency_injection.py  deserializers.py  enums.py  exceptions.py  hashing.py  helpers.py  monitoring.py  performance.py  retry.py  serializers.py  validators.py
data/validation/: __init__.py  compliance_validator.py  consistency_validator.py  contract_validator.py  drift_validator.py  integrity_validator.py  pii_validator.py  quality_validator.py  schema_validator.py  validation_audit.py  validation_metrics.py  validation_pipeline.py  validation_rules.py
edge_functions/: auth.ts  cache_layer.ts  executor.ts  fraud_realtime.ts  gateway.ts  rate_limit.ts  router.ts
feature_store/: builder.py  registry.py
governance/reports/: architecture-audit.json  architecture-audit.md  frontend_supabase_audit.json  frontend_supabase_audit.md
governance/scripts/: enterprise_architecture_audit.py  frontend_supabase_audit.py  frontend_supabase_audit_v2.py
infrastructure/: base_service.py  cache.py  config.py  database.py  event_bus.py  healthcheck.py  logger.py  metrics.py  security.py  storage.py
kwanza-ai-core/: .gitignore
kwanza-ai-core/api/: main.py
kwanza-ai-core/core/: config.py
kwanza-ai-core/models/: base_model.py  cashflow_forecast.py  nlp_classifier.py  payroll_optimizer.py  revenue_prediction.py
kwanza-ai-core/services/: cashflow_service.py  inference_service.py  payroll_service.py  training_service.py  ueba_service.py
ml/: __init__.py
ml/anomaly_detection/: evaluator.py  features.py  model.py  predictor.py  schemas.py  trainer.py
ml/configs/: ml_config.py
ml/forecasting/: cashflow_predictor.py  lstm_forecast.py  prophet_forecast.py
ml/fraud_detection/: model.py  predictor.py  rules_engine.py  trainer.py
models/: base_model.py  cashflow_forecast.py  cashflow_model.py  fraud_detection.py  fraud_model.py  revenue_model.py  ueba_model.py  ueba_score.py
pipelines/: batch_predict.py  realtime_predict.py  train.py
public/: manifest.json  sw.js
services/: cashflow_service.py  feature_engineering.py  fraud_service.py  inference_service.py  nlp_service.py  payroll_service.py  prediction_service.py  revenue_service.py  services.py  supabase_client.py  training_service.py  ueba_service.py
src/: App.tsx  index.css  main.tsx
tests/: __init__.py  conftest.py
uploaded_files/: files_index.json
(+335 files in other folders)
