# ==============================================================================
# pyproject.toml
# ------------------------------------------------------------------------------
# Enterprise Python project configuration for the `data` platform.
# Centralizes build metadata, dependencies, formatting, linting, typing,
# tests, coverage, security scanning and package tooling.
# ==============================================================================

[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"


# ==============================================================================
# PROJECT METADATA
# ==============================================================================

[project]
name = "data"
version = "1.0.0"
description = "Enterprise-grade modular data platform for ingestion, processing, validation, quality, governance, security, observability, orchestration and AI-enabled workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Data Platform Team", email = "data-platform@example.com" }
]
maintainers = [
  { name = "Data Platform Team", email = "data-platform@example.com" }
]
keywords = [
  "data-platform",
  "data-quality",
  "data-governance",
  "data-observability",
  "lakehouse",
  "etl",
  "elt",
  "orchestration",
  "ingestion",
  "validation",
  "profiling",
  "schema-drift",
  "enterprise"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Typing :: Typed"
]
dependencies = [
  "python-dotenv>=1.0.0,<2.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "typing-extensions>=4.10.0"
]

[project.urls]
Homepage = "https://example.com/data-platform"
Documentation = "https://example.com/data-platform/docs"
Repository = "https://example.com/data-platform/repository"
Issues = "https://example.com/data-platform/issues"
CI = "https://example.com/data-platform/ci"

[project.scripts]
data-platform = "data.cli:main"
data-quality = "data.quality.cli:main"


# ==============================================================================
# OPTIONAL DEPENDENCIES
# ==============================================================================

[project.optional-dependencies]
dataframe = [
  "pandas>=2.2.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pyarrow>=15.0.0,<22.0.0",
  "openpyxl>=3.1.0,<4.0.0"
]
database = [
  "SQLAlchemy>=2.0.0,<3.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "alembic>=1.13.0,<2.0.0"
]
api = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0"
]
streaming = [
  "confluent-kafka>=2.4.0,<3.0.0",
  "redis>=5.0.0,<6.0.0"
]
observability = [
  "prometheus-client>=0.20.0,<1.0.0",
  "opentelemetry-api>=1.24.0,<2.0.0",
  "opentelemetry-sdk>=1.24.0,<2.0.0",
  "structlog>=24.1.0,<26.0.0"
]
quality = [
  "pandas>=2.2.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "python-dateutil>=2.9.0,<3.0.0"
]
ai = [
  "openai>=1.30.0,<2.0.0",
  "tiktoken>=0.7.0,<1.0.0",
  "scikit-learn>=1.4.0,<2.0.0"
]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "black>=24.0.0,<26.0.0",
  "bandit[toml]>=1.7.9,<2.0.0",
  "build>=1.2.0,<2.0.0",
  "twine>=5.0.0,<7.0.0",
  "pre-commit>=3.7.0,<5.0.0"
]
docs = [
  "mkdocs>=1.6.0,<2.0.0",
  "mkdocs-material>=9.5.0,<11.0.0",
  "mkdocstrings[python]>=0.25.0,<1.0.0"
]
all = [
  "pandas>=2.2.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pyarrow>=15.0.0,<22.0.0",
  "openpyxl>=3.1.0,<4.0.0",
  "SQLAlchemy>=2.0.0,<3.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "confluent-kafka>=2.4.0,<3.0.0",
  "redis>=5.0.0,<6.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "opentelemetry-api>=1.24.0,<2.0.0",
  "opentelemetry-sdk>=1.24.0,<2.0.0",
  "structlog>=24.1.0,<26.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "openai>=1.30.0,<2.0.0",
  "tiktoken>=0.7.0,<1.0.0",
  "scikit-learn>=1.4.0,<2.0.0"
]


# ==============================================================================
# SETUPTOOLS
# ==============================================================================

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["data", "data.*"]
exclude = ["tests", "tests.*", "docs", "docs.*", "examples", "examples.*"]

[tool.setuptools.package-data]
data = [
  "py.typed",
  "config/*.json",
  "config/*.yaml",
  "config/*.yml",
  "schemas/*.json",
  "templates/*.json",
  "templates/*.yaml",
  "templates/*.yml"
]


# ==============================================================================
# RUFF - LINT + FORMAT
# ==============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
src = ["data", "tests"]
fix = true
show-fixes = true
respect-gitignore = true
extend-exclude = [
  ".git",
  ".venv",
  "venv",
  "env",
  ".tox",
  ".nox",
  "build",
  "dist",
  "htmlcov",
  "storage",
  "warehouse",
  "data_lake",
  "lakehouse",
  "logs",
  "tmp",
  "temp",
  "node_modules",
  "generated",
  "vendor"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "F",
  "FA",
  "FBT",
  "FIX",
  "G",
  "I",
  "ICN",
  "ISC",
  "N",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TCH",
  "TD",
  "TRY",
  "UP",
  "W",
  "YTT"
]
ignore = [
  "COM812",
  "ISC001",
  "S101",
  "TRY003",
  "EM101",
  "EM102",
  "PLR0913",
  "PLR0912",
  "PLR0915",
  "PLR2004",
  "TD002",
  "TD003",
  "FIX002"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "PLR2004", "FBT001", "FBT002"]
"**/__init__.py" = ["F401", "F403"]
"setup.py" = ["T201", "S603", "S607"]
"data/**/cli.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["data"]
combine-as-imports = true
force-sort-within-sections = false

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"


# ==============================================================================
# BLACK
# ==============================================================================

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = "\\.pyi?$"
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | \.tox
  | \.nox
  | build
  | dist
  | htmlcov
  | storage
  | warehouse
  | data_lake
  | lakehouse
  | logs
  | tmp
  | temp
  | generated
  | vendor
)/
'''


# ==============================================================================
# MYPY
# ==============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
no_implicit_optional = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["data"]
exclude = [
  "build/",
  "dist/",
  "storage/",
  "warehouse/",
  "data_lake/",
  "lakehouse/",
  "logs/",
  "tmp/",
  "temp/",
  "generated/",
  "vendor/"
]

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "numpy.*",
  "pyarrow.*",
  "confluent_kafka.*",
  "redis.*",
  "openai.*",
  "sklearn.*"
]
ignore_missing_imports = true


# ==============================================================================
# PYTEST
# ==============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "--cov=data",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml:coverage.xml",
  "--cov-report=html:htmlcov",
  "--junitxml=junit.xml"
]
markers = [
  "unit: fast isolated unit tests",
  "integration: integration tests requiring external dependencies",
  "e2e: end-to-end tests",
  "slow: slow tests",
  "security: security-focused tests",
  "quality: data quality module tests",
  "database: database-backed tests",
  "streaming: streaming/Kafka tests",
  "ai: AI/RAG-related tests"
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning"
]
log_cli = false
log_cli_level = "INFO"


# ==============================================================================
# COVERAGE
# ==============================================================================

[tool.coverage.run]
branch = true
source = ["data"]
omit = [
  "tests/*",
  "*/tests/*",
  "*/__init__.py",
  "setup.py",
  "data/**/cli.py",
  "data/**/migrations/*",
  "data/**/generated/*",
  "data/**/vendor/*"
]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "def __repr__",
  "except ImportError",
  "except Exception as exc",
  "\.\.\."
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"


# ==============================================================================
# BANDIT
# ==============================================================================

[tool.bandit]
targets = ["data"]
exclude_dirs = [
  "tests",
  "build",
  "dist",
  ".venv",
  "venv",
  "env",
  "storage",
  "warehouse",
  "data_lake",
  "lakehouse",
  "logs",
  "tmp",
  "temp",
  "generated",
  "vendor"
]
skips = [
  "B101", # assert used, covered by tests and CI policy
  "B311"  # pseudo-random generators allowed for non-crypto sampling
]
severity = "medium"
confidence = "medium"


# ==============================================================================
# ISORT - compatibility if used outside Ruff
# ==============================================================================

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["data"]
combine_as_imports = true
force_sort_within_sections = false
skip = [
  ".git",
  ".venv",
  "venv",
  "env",
  ".tox",
  ".nox",
  "build",
  "dist",
  "storage",
  "warehouse",
  "data_lake",
  "lakehouse",
  "logs",
  "tmp",
  "temp",
  "generated",
  "vendor"
]


# ==============================================================================
# PYLINT - optional compatibility
# ==============================================================================

[tool.pylint.main]
py-version = "3.10"
ignore = ["build", "dist", ".venv", "venv", "env", "storage", "warehouse", "logs"]
load-plugins = []

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-locals",
  "too-many-branches",
  "too-many-statements",
  "line-too-long",
  "duplicate-code"
]

[tool.pylint.format]
max-line-length = 100


# ==============================================================================
# PYRIGHT - optional compatibility
# ==============================================================================

[tool.pyright]
include = ["data"]
exclude = [
  "**/__pycache__",
  ".venv",
  "venv",
  "env",
  ".tox",
  ".nox",
  "build",
  "dist",
  "storage",
  "warehouse",
  "data_lake",
  "lakehouse",
  "logs",
  "tmp",
  "temp",
  "generated",
  "vendor"
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false


# ==============================================================================
# TOWNCRIER - optional changelog automation
# ==============================================================================

[tool.towncrier]
package = "data"
package_dir = "."
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## [{version}] - {project_date}"
issue_format = "#{issue}"


# ==============================================================================
# COMMITIZEN - optional semantic versioning
# ==============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
  "data/__init__.py:__version__",
  "pyproject.toml:version"
]
update_changelog_on_bump = true


# ==============================================================================
# DOCS - MKDOCS / MKDOCSTRINGS COMPATIBILITY
# ==============================================================================

[tool.mkdocstrings]
handlers.python.options.docstring_style = "google"
handlers.python.options.show_source = true
handlers.python.options.show_root_heading = true
handlers.python.options.show_symbol_type_heading = true


# ==============================================================================
# CUSTOM ENTERPRISE TOOLING METADATA
# ==============================================================================

[tool.data]
package = "data"
architecture = "enterprise-modular"
default_environment = "development"
quality_gate_enabled = true
schema_drift_enabled = true
observability_enabled = true
governance_enabled = true
security_baseline = "standard"

[tool.data.paths]
config = "config"
logs = "logs"
storage = "storage"
quality_reports = "storage/quality/reports"
quality_audit = "storage/quality/audit"
schema_baselines = "storage/schema/baselines"
exports = "storage/exports"

[tool.data.quality]
minimum_score = 0.95
warning_score = 0.98
fail_on_schema_drift = true
fail_on_critical_findings = true
max_findings_per_rule = 1000

[tool.data.security]
mask_secrets_in_logs = true
secret_field_patterns = ["password", "secret", "token", "key", "authorization", "cookie"]
forbid_env_commit = true
